--- a/brew.html
+++ b/brew.html
@@ -34,10 +34,10 @@
 
 	<div class="row">
 		<div class="col-12">
-			<h1>- BR3W -</h1>
+			<h2>- BR3W -</h2>
 		</div>
 		<div class="col-12">
-			<h2>A smart coffee machine to customize the brewing and drinking experience.</h2>
+			<h3>A smart coffee machine to customize the brewing and drinking experience.</h3>
 			<p>duration: Oct. 2019 - Dec. 2019</p>
 			<p>BR3W was a project through UCLA Creative Labs where we aimed to design and build a smart coffee machine from scratch.</p>
 			<p>As the mechanical engineer on an 11-person team, I used Autodesk Inventor to model the housing structure for all of the inner electrical and mechanical workings, then built it out of wood. I also designed some of the specific mechanisms for the brewing process.</p>
@@ -50,18 +50,18 @@
 			<!-- some image !! -->
 		</div>
 		<div class="col-6">
-			<h3>Process</h3>
-			<h2>Brainstorming</h2>
+			<h4>Process</h4>
+			<h3>Brainstorming</h3>
 				<p>As a team, we decided broadly which features we would like to see in a smart coffee machine.</p>
-			<h2>Sketching</h2>
+			<h3>Sketching</h3>
 				<p>Each member in the build team created an idealized sketch of what the coffee machine would look like and how different mechanisms would be positioned together. Afterwards, I complied the sketches and created an inital design.</p>
-			<h2>Research and refinement</h2>
+			<h3>Research and refinement</h3>
 				<p>We then researched the process of coffee making (both standard coffee as well as espresso). Through this, we refined and finalized our feature list and design.</p>
-			<h2>3D modeling</h2>
+			<h3>3D modeling</h3>
 				<p>I modeled the machine components in Autodesk Inventor to ensure that all pieces would fit together, while maintaining space for electrical components. At this stage, our intent was to 3D print all of the parts to minimize work and maximize accuracy. However, we found that much of the coffee machine would be inefficient to print and would the risk of print failures. We decided to make the machine out of wood and only print components that required it.</p>
-			<h2>Building</h2>
+			<h3>Building</h3>
 				<p>Undeniably the most time-consuming (but rewarding) part of this process - building the structure out of wood planks and acrylic.</p>
-			<h2>Assembly and testing</h2>
+			<h3>Assembly and testing</h3>
 				<p>The two weeks prior to Demo Day were dedicated to finishing electrical functionalities, then assembling and testing the entire coffee machine - electrical components included - to ensure that everything would work.</p>
 		</div>
 	</div>
@@ -69,7 +69,7 @@
 	<div class="row">
 		<hr>
 		<div class="col-6">
-			<h3>Results</h3>
+			<h4>Results</h4>
 			<p>The coffee machine we created by Demo Day allowed the user to customize the temperature, cup size, and brew strength of their coffee. These settings could be adjusted through an app or via the touchscreen connected to the physical machine. The brewing process was also monitored to notify the user when their coffee is ready to drink.</p>
 			<p>The coffee flow was as follows:</p>
 			<ul class="br3w-list">
@@ -88,7 +88,7 @@
 		<hr>
 		<div class="col-2"><p></p></div>
 		<div class="col-8">
-			<h3>Takeaways</h3>
+			<h4>Takeaways</h4>
 			<p>Since we only had 8 weeks to produce our product, BR3W is still largely a rough prototype. Using smaller components and minimzing the amount of space needed for electronics and storage (water and grounds) are potential futher steps to take to enhance our product in terms of design and appearance, as it would allow us to create a sleeker container. In terms of functionality, the next steps would be to optimze the transportation process of coffee grounds and hot water.</p>
 			<p>This was the first actual project that I've completed which yielded real results, and I have learned so much from this process - namely to trust my instincts and have faith in my abilities and decision-making. I did have to be realistic when it came to how asthetically pleasing our product would look - resource and time contraints meant that our housing boxes wouldn't be perfect. I also had to troubleshoot issues that arose when having a large number of people working at once resulted in a part malfunction. At the same time, I am so proud to have been able to create a functional smart coffee machine with a group of incredibly intelligent, kind, and like-minded individuals.</p>
 		</div>
@@ -105,9 +105,9 @@
 			<div class="col-12">
 				<p>made with <span style="color: #DF4343;">&#9825;</span> by meilin cui. 2019</p>
 				<ul class="nav-list">
-					<li class="nav-elem"><a href="https://www.instagram.com/meilin.cui" class="icon-social-instagram" target="_blank"></a></li>
-					<li class="nav-elem"><a href="https://www.linkedin.com/in/meilin-cui/" class="icon-social-linkedin" target="_blank"></a></li>
-					<li class="nav-elem"><a href="https://github.com/cuimeilin/" class="icon-social-github" target="_blank"></a></li>
+					<li class="foot-elem"><a href="https://www.instagram.com/meilin.cui" class="icon-social-instagram" target="_blank"></a></li>
+					<li class="foot-elem"><a href="https://www.linkedin.com/in/meilin-cui/" class="icon-social-linkedin" target="_blank"></a></li>
+					<li class="foot-elem"><a href="https://github.com/cuimeilin/" class="icon-social-github" target="_blank"></a></li>
 				</ul>
 			</div>
 		</footer>
