--- a/about.html
+++ b/about.html
@@ -51,9 +51,9 @@
 			<div class="col-12">
 				<p>made with <span style="color: #DF4343;">&#9825;</span> by meilin cui. 2019</p>
 				<ul class="nav-list">
-					<li class="nav-elem"><a href="https://www.instagram.com/meilin.cui" class="icon-social-instagram" target="_blank"></a></li>
-					<li class="nav-elem"><a href="https://www.linkedin.com/in/meilin-cui/" class="icon-social-linkedin" target="_blank"></a></li>
-					<li class="nav-elem"><a href="https://github.com/cuimeilin/" class="icon-social-github" target="_blank"></a></li>
+					<li class="foot-elem"><a href="https://www.instagram.com/meilin.cui" class="icon-social-instagram" target="_blank"></a></li>
+					<li class="foot-elem"><a href="https://www.linkedin.com/in/meilin-cui/" class="icon-social-linkedin" target="_blank"></a></li>
+					<li class="foot-elem"><a href="https://github.com/cuimeilin/" class="icon-social-github" target="_blank"></a></li>
 				</ul>
 			</div>
 		</footer>
