--- a/cleanconsulting.html
+++ b/cleanconsulting.html
@@ -33,7 +33,7 @@
 
 	<div class="row">
 		<div class="col-12">
-			<h2>- clean consulting -</h2>
+			<h2 class="proj-title">- clean consulting -</h2>
 		</div>
 		<div class="col=-12">
 			<h3>A sustainable student organization.</h3>
