--- a/brew.html
+++ b/brew.html
@@ -34,7 +34,7 @@
 
 	<div class="row">
 		<div class="col-12">
-			<h2>- BR3W -</h2>
+			<h2 class="proj-title">- BR3W -</h2>
 		</div>
 		<div class="col-12">
 			<h3>A smart coffee machine to customize the brewing and drinking experience.</h3>
@@ -113,4 +113,5 @@
 		</footer>
 	</div>
 </body>
+
 </html>
