--- a/spotify.html
+++ b/spotify.html
@@ -34,7 +34,7 @@
 
 	<div class="row">
 		<div class="col-12">
-			<h2>- spotify -</h2>
+			<h2 class="proj-title">- spotify -</h2>
 		</div>
 		<div class="col-12">
 			<h3>A redesign of Spotify's mobile UX.</h3>
