--- a/penelope.html
+++ b/penelope.html
@@ -34,7 +34,7 @@
 
 	<div class="row">
 		<div class="col-12">
-			<h2>- penelope -</h2>
+			<h2 class="proj-title">- penelope -</h2>
 		</div>
 		<div class="col-12">
 			<h3>A claymation horror video game.</h3>
