--- a/illustration.html
+++ b/illustration.html
@@ -39,45 +39,47 @@
 
 	<div class="art-row">
 		<div class="art-col">
-			<img src="art/2019.08 Sustainability.png">
+			<img src="images/art/2019.12 Painted Ladies.jpg">
+				<p class="art-desc">2019.12 - pen</p>
+			<img src="images/art/2019.08 Sustainability.png">
 				<p class="art-desc">2019.08 - digital</p>
-			<img src="art/2019.07 Foods.jpg">
+			<img src="images/art/2019.07 Foods.jpg">
 				<p class="art-desc">2019.07 - digital</p>
-			<img src="art/2019.04 Portrait.jpg">
+			<img src="images/art/2019.04 Portrait.jpg">
 				<p class="art-desc">2019.04 - digital</p>
-			<img src="art/2019.03 Monstera.jpg">
+			<img src="images/art/2019.03 Monstera.jpg">
 				<p class="art-desc">2019.03 - digital</p>
-			<img src="art/2019.03 Cola.jpg">
+			<img src="images/art/2019.03 Cola.jpg">
 				<p class="art-desc">2019.03 - digital</p>
-			<img src="art/2019.01 Lemonade.jpg">
-				<p class="art-desc">2019.01 - acrylic</p>
 		</div>
 
 		<div class="art-col">
-			<img src="art/2018.09 Soda.jpg">
+			<img src="images/art/2019.01 Lemonade.jpg">
+				<p class="art-desc">2019.01 - acrylic</p>
+			<img src="images/art/2018.09 Soda.jpg">
 				<p class="art-desc">2018.09 - acrylic</p>
-			<img src="art/2018.09 Peach.jpg">
+			<img src="images/art/2018.09 Peach.jpg">
 				<p class="art-desc">2018.09 - acrylic</p>
-			<img src="art/2018.09 Sakuma.jpg">
+			<img src="images/art/2018.09 Sakuma.jpg">
 				<p class="art-desc">2018.09 - acrylic</p>
-			<img src="art/2018.09 HiChew.jpg">
+			<img src="images/art/2018.09 HiChew.jpg">
 				<p class="art-desc">2018.09 - acrylic</p>
-			<img src="art/2018.09 Taiyaki.jpg">
-				<p class="art-desc">2018.09 - acrylic</p>
-			<img src="art/2018.09 Sandwich.jpg">
+			<img src="images/art/2018.09 Taiyaki.jpg">
 				<p class="art-desc">2018.09 - acrylic</p>
 		</div>
 	
 		<div class="art-col">
-			<img src="art/2018.07 Ice Cream.jpg">
+			<img src="images/art/2018.09 Sandwich.jpg">
+				<p class="art-desc">2018.09 - acrylic</p>
+			<img src="images/art/2018.07 Ice Cream.jpg">
 				<p class="art-desc">2018.07 - digital</p>
-			<img src="art/2018.06 Socks.png">
+			<img src="images/art/2018.06 Socks.png">
 				<p class="art-desc">2018.06 - acrylic</p>
-			<img src="art/2017.12 Enough.jpg">
+			<img src="images/art/2017.12 Enough.jpg">
 				<p class="art-desc">2017.12 - digital</p>
-			<img src="art/2017.10 Howls.jpg">
+			<img src="images/art/2017.10 Howls.jpg">
 				<p class="art-desc">2017.10 - pen and marker</p>
-			<img src="art/2017.08 Akira.jpg">
+			<img src="images/art/2017.08 Akira.jpg">
 				<p class="art-desc">2017.08 - pencil and pen</p>
 		</div>
 	</div>
