--- a/penelope.html
+++ b/penelope.html
@@ -49,9 +49,22 @@
 		<div class="col-12">
 			<h4>Conception and Concept Art</h4>
 			<p>Penelope is a claymation horror video game split into two parts:</p>
-			<p>Part 1 - Penelope (you, the player) finds herself traveling late into the night to make it to her sister's wedding. Becoming increasingly tired, she stumbles upon an old Victorian-era house that the owner so graciously converted into an AirBNB. With no other choice, Penelope enters and finds herself dragged into something much more sinister - she must now escape by utilizing the clay-like nature of herself and her environment.</p>
-			<p>Part 2 - Penelope makes it out of the house! She packs up her old station wagon and hits the road without looking back. She heaves a sigh of relief as she's finally in the clear - or is she?</p>
-			<p>Below is some of my concept art for potential enemies. I also designed and developed a blueprint of the house Penelope finds herself in.</p>
+			<p>Part 1 - Penelope (you, the player) finds herself traveling late into the night to make it to her sister's wedding. Becoming increasingly tired, she stumbles upon an old Victorian-era house that the owner so graciously converted into an Airbnb. With no other choice, Penelope enters and finds herself dragged into something much more sinister - she must now escape by utilizing the clay-like nature of herself and her environment.</p>
+			<p>Part 2 - Penelope makes it out of the house! She packs up her old station wagon and hits the road without looking back, though she is not actually completely safe yet.</p>
+			<p>Below is some of my concept art and the blueprint of the house I created in Google Sketchup.</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-6">
+			<img src="images/penelope/bnb v1.jpg">
+		</div>
+		<div class="col-6">
+			<img src="images/penelope/floor plan v1.jpg">
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-12">
+			<img src="images/penelope/blueprint.jpg">
 		</div>
 	</div>
 
@@ -64,8 +77,26 @@
 	</div>
 
 	<div class="row">
-		<hr>
 		<div class="col-6">
+			<img src="images/penelope/bathroom 1.png">
+		</div>
+		<div class="col-6">
+			<img src="images/penelope/bathroom 2.png">
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-6">
+			<img src="images/penelope/bathroom 3.png">
+		</div>
+		<div class="col-6">
+			<img src="images/penelope/bathroom 4.png">
+		</div>
+	</div>
+
+	<div class="row">
+		<hr>
+		<div class="col-12">
 			<h4>Results (as of Dec. 2019)</h4>
 			<p>After 8 weeks of ideation (mechanics and characters) and design, we managed to create a semi-working demo of the game. This demo allowed the player to explore the first floor of the AirBNB (consisting of the kitchen, the living room, the study, and a bathroom), as well as introduces a preliminary throwing mechanic.</p>
 			<p>This project is to continue into the next academic quarter, where we aim to have a demo with full house exploration capabilities, enemies, and extension into the second part of the game.</p>
