--- a/brew.html
+++ b/brew.html
@@ -46,10 +46,7 @@
 
 	<div class="row">
 		<hr>
-		<div class="col-6">
-			<!-- some image !! -->
-		</div>
-		<div class="col-6">
+		<div class="col-12">
 			<h4>Process</h4>
 			<h3>Brainstorming</h3>
 				<p>As a team, we decided broadly which features we would like to see in a smart coffee machine.</p>
@@ -65,10 +62,24 @@
 				<p>The two weeks prior to Demo Day were dedicated to finishing electrical functionalities, then assembling and testing the entire coffee machine - electrical components included - to ensure that everything would work.</p>
 		</div>
 	</div>
+	<div class="row">
+		<div class="col-6">
+			<img src="images/brew/sketch 1.jpg">
+		</div>
+		<div class="col-6">
+			<img src="images/brew/sketch 3.jpg">
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-12">
+			<img src="images/brew/3D model.png">
+		</div>
+	</div>
 
 	<div class="row">
 		<hr>
-		<div class="col-6">
+		<div class="col-12">
 			<h4>Results</h4>
 			<p>The coffee machine we created by Demo Day allowed the user to customize the temperature, cup size, and brew strength of their coffee. These settings could be adjusted through an app or via the touchscreen connected to the physical machine. The brewing process was also monitored to notify the user when their coffee is ready to drink.</p>
 			<p>The coffee flow was as follows:</p>
@@ -81,7 +92,6 @@
 				<li>coffee comes out</li>
 			</ul>
 		</div>
-		<div class="col-6"></div>
 	</div>
 
 	<div class="row">
