--- a/cleanconsulting.html
+++ b/cleanconsulting.html
@@ -38,15 +38,27 @@
 		<div class="col=-12">
 			<h3>A sustainable student organization.</h3>
 			<p>Clean Consulting is an organization at UCLA aiming to empower companies to understand and act on their connections with the natural world.</p>
-			<p>As the lead graphic designer, I create promotional material for our project teams and work on organization branding. I was asked to create a design for our team apparel. </p>
+			<p>As the lead graphic designer, I create promotional material for our project teams and work on organization branding. I was given free range to create a design for our team apparel. </p>
 		</div>
 	</div>
 
 	<div class="row">
 		<hr>
-		<div class="col-6">
+		<div class="col-12">
 			<h4>Hand-Lettering</h4>
-			<p>Something that most, if not all, of the board wanted to keep from the previous year's design was our organization's name hand-lettered. I wrote out our name using a few different hand-lettering styles to provide a range to choose from, that would best suit the design.</p>
+			<p>We wanted to keep the hand-lettered aspect of last year's apparel, so I sketched out a few potential options that I thought would be suitable for a shirt.</p>
+			<p>Things of note:</p>
+			<ul>
+				<li>loops had be large enough to prevent the printed design from being muddled</li>
+				<li>I decided on a continuous width throughout up- and down-strokes to be consistent with the uniformity of my botanical style (below)</li>
+				<li>ultimately, I decided on the top lettering style: letters were generally of uniform height and the stacked words allowed for substantial bordering detail</li>
+			</ul>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-3"><p></p></div>
+		<div class="col-6">
+			<img src="images/clean consulting/lettering.jpg">
 		</div>
 	</div>
 
@@ -54,20 +66,39 @@
 		<hr>
 		<div class="col-12">
 			<h4>Sketching</h4>
-			<p>Clean Consulting, at its core, is an organization for promotion of sustainable action to preserve nature. The design from the previous year had a lot going on, so I wanted to make it simplier. As such, the concept of nature led me to flora and botanical gardens.</p>
-			<p>Below are some sketches of various botanical life that I found appealing. These sketches were not done with the intent to put them on a shirt - rather, I wanted to explore the variety in plant life first, so I could develop a solid foundation in plant structure, as well as develop a specific style for drawing flora.</p>
+			<p>Clean Consulting, at its core, is an organization for promotion of sustainable action to preserve nature. I wanted a realtively clean and simple design that was still "pretty" and ultimately decided on flora and botanical life to serve as decorative elements.</p>
+			<p>I made some sketches from life and from images references to explore the variations in plant life and to develop a foundation in plant structure as well as a specific style in drawing flora.</p>
 		</div>
-		<div class="col-6">
+	</div>
+	<div class="row">
+		<div class="col-7">
+			<img src="images/clean consulting/botanical 1.jpg">
+		</div>
+			<div class="col-5">
+			<img src="images/clean consulting/botanical 2.jpg">
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-12">
 			<p>I then combined the hand-lettered name with some of the botanical life that I sketched out as well as found online, and came up with a very rough idea of what this shirt should look like. This design was to be on the back of the shirt, in a position similar to where the Patagonia logo is on their apparel.</p>
-			<p>I also wanted to maintain the simplicity across the front and backs of the shirt, so I decided on a basic left-breast flower design for the front.</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-2"><p></p></div>
+		<div class="col-8">
+			<img src="images/clean consulting/sketch.jpg">
 		</div>
 	</div>
 
 	<div class="row">
 		<hr>
 		<div class="col-12">
-			<h4>Results</h4>
-			<p>I used Affinity Designer and the vector pen tool to draw out the design. After a lot of adjustment, I reached a final product that I was pleased with - see below.</p>
+			<h4>(Tentative) Results</h4>
+			<p>I used Affinity Designer and the vector pen tool to draw out the design and will be increasing the spacing between some smaller line work to ensure everything is printed clearly.</p>
+		</div>
+		<div class="col-12">
+			<img src="images/clean consulting/shirt back v1.jpg">
 		</div>
 	</div>
 
