--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="meilin cui's website" />
+    <meta name="description" content="Meilin Cui's website" />
     <meta name="msapplication-TileColor" content="#fffbf0" />
     <meta name="theme-color" content="#ffffff" />
     <!--
@@ -44,7 +44,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>meilin cui</title>
+    <title>Meilin Cui</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
